# ainvest

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  TESTS.md  Tian_in_R,_Matlab,_VBA,_C++,_Python_with_out_Greeks_and_Options_on_Options_.ipynb  app.py  entrypoint.sh  main.py  pyproject.toml
_components/: _app.py  login.py  sidebar.py
agents/: crawler.py  email.py  general.py  github.py  hackernews.py  search.py  team.py  yfinance.py  youtube.py
app/: Home.py  app.py  firebase.yaml  page_common.py
app/agents/: general.py  github.py  search.py  team.py  yfinance.py
app/components/: account.py  admin.py  login.py  profile.py  pvt_pf.py  quote.py  sidebar.py  stock.py
app/lib/: __init__.py  database.py  gsheets.py  user.py  yf.py
app/pages/: 1_Portfolio.py  1_📈_Portfolio.py  2_↔️_Transactions.py  3_Transactions.py  3_↔️_Transactions.py  3_🏆_Leaderboard.py  4_Assistant.py  4_🪄_Assistant.py  8_ℹ️_Information.py  9_🛡️_Terms.py
app/texts/: about.md  agent_team_config.yaml  data_security_and_privacy.md  please_register.md  terms_of_usage.md
components/: sidebar.py
lib/: __init__.py  database.py  model.py  user.py
notebooks/: american_option_pricing_binomial_model.ipynb  expore_db.ipynb  yfinance_test.ipynb
tests/: firestore_realtime.py
tests/lib/: test_database.py  test_user.py
