[project]
name = "ainvest"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agno>=2.0.8",
    "ddgs>=9.6.0",
    "google-cloud-firestore>=2.21.0",
    "google-genai>=1.38.0",
    "matplotlib>=3.10.6",
    "pydash>=8.0.5",
    "python-box>=7.3.2",
    "streamlit>=1.50.0",
    "yfinance>=0.2.66",
]
